# Indus-Valley

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  AUDITOR_PLAYBOOK.md  AUTHORITY_SNAPSHOT.md  AUTONOMOUS_EXECUTION_POLICY.md  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  GOVERNANCE.md  HF_CUSTODY_REGISTER.md  MIGRATION_PLAN.md  NOTICE  NOTICE.md  PRD_GNOSIS_INDUS_ANCHOR_APPLICATION.md  PRIVATE_INTERNAL_LICENSE_NOTICE.md  PRIVATE_PROVENANCE_APPENDIX.md  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SMOKE_TESTS.md  SOURCE_BOUNDARY.md  STARTUP_PROMPT.md  STATUS_REPORT_2026-04-24.md  THIRD_PARTY_NOTICES.md  TODO.md  WORKSTREAM_GPD_INIT_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.gpd/: CONVENTIONS.md  DECISIONS.md  NOTATION_GLOSSARY.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
.gpd/phases/00-workstream-bootstrap/: 00-01-PLAN.md  00-01-SUMMARY.md  00-CONTEXT.md  00-RESEARCH.md  00-VERIFICATION.md
.gpd/phases/01-source-truth-and-authority-admission/: 01-01-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md  VERIFICATION.md
.gpd/phases/02-extraction-and-minimal-replay-surface/: 02-01-PLAN.md  02-CONTEXT.md  VERIFICATION.md
.gpd/phases/03-truth-preserving-packaging/: 03-01-PLAN.md  03-CONTEXT.md  VERIFICATION.md
_internal/: GPD_BOOTSTRAP_GUIDE.md  README.md  STATUS_REPORT_2026-04-24.md  UNIVERSAL_STARTUP_PROMPT.md  WORKSTREAM_GPD_INIT_CHECKLIST.md
artifacts/phase4/: README.md  indus_catalogue_demo_fixture.json
authority/: README.md
authority/papers/: paper1_governing_verdict.md  paper1_governing_verdict_referee.md  paper1_governing_verdict_v2.md  paper2_governing_verdict.md
authority/review_pack/: executive_summary.md  indus_catalogue_summary.md  phase4_governing_verdict.md  phase5_governing_verdict.md  prd_phase4_indus_catalogue.md  prd_phase5_falsification.md  publishable_finding.md  search_demo_summary.md
code/: README.md
docs/: ARCHITECTURE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  LEGAL_BOUNDARIES.md  README.md  SUPPORT.md
docs/family/: INDUS_EXPORT_CONTRACT.md
src/gnosis_indus/: __init__.py
src/gnosis_indus/search_surface/: __init__.py  _fixture.py  catalogue.py  engine.py
tests/: test_search_surface.py
tools/: indus_ops_gate.py
